adding some pictures

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="page-header">
       <nav class="navigation">
         <a class="navigation-logo" href="index.html">
-          <img class="logo-sedona" src="#" alt="Логотип City of Sedona">
+          <img class="logo-sedona" src="images/footer/logo.png" width="140" height="70" alt="Логотип City of Sedona">
         </a>
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -52,7 +52,8 @@
     <!--Main-->
     <main class="main-home-page">
       <h1 class="visual-hidden">Welcome to the gorgerous Sedona. Because the Grand Canyon sucks!</h1>
-      <img class="logo" src="#" alt="Логотип Седоны.">
+      <img class="logo" src="images/main/welcome-big-logo.svg" alt="Седоны." width="458" height="352">
+
 
       <!--подводка к приемуществам-->
       <section class="advantages">
@@ -69,7 +70,7 @@
             <p class="reasons-for-coolness-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
           </li>
           <li class="reasons-for-coolness-item">
-            <img class="reasons-for-coolness-picture" src="#" alt="фото улицы Седоны">
+            <img class="reasons-for-coolness-picture" src="images/main/photo-1.jpg" alt="фото улицы Седоны" width="800" height="385">
           </li>
         </ul>
         <ul class="reasons-for-coolness-list middle-row">
@@ -88,7 +89,7 @@
         </ul>
         <ul class="reasons-for-coolness-list bottom-row">
           <li class="reasons-for-coolness-item">
-            <img class="reasons-for-coolness-picture" src="#" alt="фото моста дьявола">
+            <img class="reasons-for-coolness-picture" src="images/main/photo-2.jpg" alt="фото моста дьявола" width="800" height="385">
           </li>
           <li class="reasons-for-coolness-item">
             <h3 class="reasons-for-coolness-title">Там есть мост дьявола</h3>
@@ -172,24 +173,19 @@
         </address>
       </section>
       <a class="logo" href="https://htmlacademy.ru/">
-        <img class="logo-picture" alt="Логотип html-academy»." src="#">
+        <img class="logo-picture" alt="Логотип html-academy»." src="images/footer/logo_htmlacademy.svg" width="114.9" height="32.9">
+
       </a>
     </footer>
   </body>
 </html>
 
 
-<!--Кроссбраузерность
-Chrome: последняя стабильная версия.
-Firefox: последняя стабильная версия.
-Safari: последняя стабильная версия (для студентов с macOS).
-ОБЩИЕ ТРЕБОВАНИЯ
-При нехватке контента страницы подвал прижат к низу страницы.
-Модальные окна должны позиционироваться относительно видимой части экрана.
-Иконки социальных сетей в футере ведут на профили .html academy:
-Vkontakte — https://vk.com/htmlacademy
-Telegram — https://t.me/htmlacademy
-Youtube — https://www.youtube.com/user/htmlacademyru
-Логотип .html academy ведёт на главную страницу сайта разработчика — https://htmlacademy.ru/
-Оживлять макет не нужно, нужна только вёрстка
-Браузерный фокус — фокус, который отрабатывает в браузере по умолчанию.-->
+<!--не разметила в index:
+1. Иконки в header
+2. Кнопку в header
+3. картинку-подложку под седоной
+4. Икноки где гамбургер
+5. кнопку поиск гостинец
+6. кнопку-подписку на рассылку
+7. социальные сети -->
