--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
     <header class="page-header">
       <nav class="navigation">
         <a class="navigation-logo" href="index.html">
-          <img class="logo-sedona" src="#" alt="Логотип City of Sedona">
+          <img class="logo-sedona" src="images/footer/logo.png" width="140" height="70" alt="Логотип City of Sedona">
         </a>
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -146,7 +146,7 @@
       <ul class="product-list">
         <li>
           <a class="hotel-card-link" href="hotel.html">
-            <img class="hotel-card-image" src="#" alt="">
+            <img class="product-card-image" src="images/main/hotels/hotel-1.jpg" width="300" height="212" alt="">
             <h3 class="hotel-card-title">Amara Resort & Spa</h3>
           </a>
           <b class="hotel-card-type">Гостиница</b>
@@ -159,7 +159,7 @@
         </li>
         <li>
           <a class="hotel-card-link" href="hotel.html">
-            <img class="hotel-card-image" src="#" alt="">
+            <img class="product-card-image" src="images/main/hotels/hotel-2.jpg" width="300" height="212" alt="">
             <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
           </a>
           <b class="hotel-card-type">Гостиница</b>
@@ -172,7 +172,7 @@
         </li>
         <li>
           <a class="hotel-card-link" href="hotel.html">
-            <img class="hotel-card-image" src="#" alt="">
+            <img class="product-card-image" src="images/main/hotels/hotel-3.jpg" width="300" height="212" alt="">
             <h3 class="hotel-card-title">Desert Quail Inn</h3>
           </a>
           <b class="hotel-card-type">Гостиница</b>
@@ -185,7 +185,7 @@
         </li>
         <li>
           <a class="hotel-card-link" href="hotel.html">
-            <img class="hotel-card-image" src="#" alt="">
+            <img class="product-card-image" src="images/main/hotels/hotel-4.jpg" width="300" height="212" alt="">
             <h3 class="hotel-card-title">GreenTree Inn</h3>
           </a>
           <b class="hotel-card-type">Гостиница</b>
@@ -284,7 +284,7 @@
         </address>
       </section>
       <a class="logo" href="https://htmlacademy.ru/">
-        <img class="logo-picture" alt="Логотип html-academy»." src="#">
+        <img class="logo-picture" alt="Логотип html-academy»." src="images/footer/logo_htmlacademy.svg" width="114.9" height="32.9">
       </a>
     </footer>
   </body>
