--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
 
   <body>
@@ -10,7 +11,7 @@
     <header class="page-header">
       <nav class="navigation">
         <a class="navigation-logo" href="index.html">
-          <img class="logo-sedona" src="images/footer/logo.png" width="140" height="70" alt="Логотип City of Sedona">
+          <img class="logo-sedona" src="images/header/logo.png" width="140" height="70" alt="Логотип City of Sedona">
         </a>
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -39,19 +40,18 @@
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="#">
-              <span class="visually-hidden">
-                Хочу сюда!
-              </span>
-            </a>
+            <button class=" button brown-button" type="button">
+              <span class="visually-hidden">Хочу сюда!</span>
+            </button>
           </li>
         </ul>
       </nav>
     </header>
 
+
     <!--Main-->
     <main class="main-home-page">
-      <h1 class="visual-hidden">Welcome to the gorgerous Sedona. Because the Grand Canyon sucks!</h1>
+      <!--h1 class="visual-hidden">Welcome to the gorgerous Sedona. Because the Grand Canyon sucks!</h1-->
       <img class="logo" src="images/main/welcome-big-logo.svg" alt="Седоны." width="458" height="352">
 
 
@@ -63,17 +63,17 @@
 
       <!--список приемуществ-->
       <section class="reasons-for-coolness">
-        <h2 class="visually-hidden">Причины крутости</h2>
+        <h2 class="visually-hidden"> Причины крутости</h2>
         <ul class="reasons-for-coolness-list">
           <li class="reasons-for-coolness-item">
             <h3 class="reasons-for-coolness-title">Настоящий городок</h3>
             <p class="reasons-for-coolness-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
           </li>
-          <li class="reasons-for-coolness-item">
+          <li class="reasons-for-coolness-item-pic">
             <img class="reasons-for-coolness-picture" src="images/main/photo-1.jpg" alt="фото улицы Седоны" width="800" height="385">
           </li>
         </ul>
-        <ul class="reasons-for-coolness-list middle-row">
+        <ul class="reasons-for-coolness-list-middle-row">
           <li class="reasons-for-coolness-item">
             <h3 class="reasons-for-coolness-title">Небольшая площадь</h3>
             <p class="reasons-for-coolness-description">Все достопримечательности находятся очень близко</p>
@@ -87,8 +87,8 @@
             <p class="reasons-for-coolness-description">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
         </ul>
-        <ul class="reasons-for-coolness-list bottom-row">
-          <li class="reasons-for-coolness-item">
+        <ul class="reasons-for-coolness-list-bottom-row">
+          <li class="reasons-for-coolness-item-pic">
             <img class="reasons-for-coolness-picture" src="images/main/photo-2.jpg" alt="фото моста дьявола" width="800" height="385">
           </li>
           <li class="reasons-for-coolness-item">
@@ -108,14 +108,17 @@
       <h2 class="visually-hidden">Услуги</h2>
       <ul class="service-list">
         <li class="service-item">
+          <img class="service-home-picture" alt="Иконка 'Домик'»." src="images/main/icons/home.svg" width="74.7" height="72">
           <h3 class="service-title">Жильё</h3>
           <p class="service-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
         </li>
         <li class="service-item">
+          <img class="service-food-picture" alt="Иконка 'Гамбургер'»." src="images/main/icons/food.svg" width="73.814" height="70">
           <h3 class="service-title">Еда</h3>
           <p class="service-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
         </li>
         <li class="service-item">
+          <img class="service-souvenir-picture" alt="Иконка 'Подарок'»." src="images/main/icons/souvenir.svg" width="64" height="75.947">
           <h3 class="service-title">Сувениры</h3>
           <p class="service-description">Не только китайского, но и настоящего местного производства!</p>
         </li>
@@ -123,19 +126,20 @@
 
       <!-- Поиск гостиницы  -->
       <section class="hotel-search">
-        <h2>Заинтересовались?</h2>
-        <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a class=" button hotel-button" href="hotel-search.html">Поиск гостиницы в Седоне</a>
+        <h2 class="hotel-title"> Заинтересовались?</h2>
+        <p class="hotel-lil-title">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <button class="button brown-button" type="button">
+          <span class="visually-hidden">Поиск гостиницы в Седоне</span>
+        </button>
       </section>
-
-
+    </main>
 
     <!--Footer-->
     <footer class="page-footer">
       <!--Рассылка-->
-      <section class="email-newsletter">
-        <h2>Подпишитесь на рассылку!</h2>
-        <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+      <section class="email-newsletter first-page">
+        <h2 class="email-title">Подпишитесь на рассылку!</h2>
+        <p class="email-lil-title">Только полезная информация и никакого спама, честное бойскаутское</p>
         <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
           <label for="newsletter-email">Ваш e-mail</label>
           <input class="field"  placeholder="email@example.com" type="email" name="newsletter-email" id="newsletter-email" required>
@@ -144,7 +148,6 @@
           </button>
         </form>
       </section>
-    </main>
       <section class="footer-social">
         <h2 class="visually-hidden">Социальные сети</h2>
         <ul class="footer-social-list">
@@ -164,7 +167,6 @@
             </a>
           </li>
         </ul>
-        <p class="about-text">Сделано в <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a></p>
       </section>
       <section class="footer-contacts">
         <h2 class="visually-hidden">Контакты</h2>
@@ -179,13 +181,3 @@
     </footer>
   </body>
 </html>
-
-
-<!--не разметила в index:
-1. Иконки в header
-2. Кнопку в header
-3. картинку-подложку под седоной
-4. Икноки где гамбургер
-5. кнопку поиск гостинец
-6. кнопку-подписку на рассылку
-7. социальные сети -->
