--- a/index.html
+++ b/index.html
@@ -50,134 +50,155 @@
 
 
     <!--Main-->
-    <main class="main-home-page">
-      <!--h1 class="visual-hidden">Welcome to the gorgerous Sedona. Because the Grand Canyon sucks!</h1-->
-      <img class="logo" src="images/main/welcome-big-logo.svg" alt="Седоны." width="458" height="352">
+    <main class="main-container main-home-page">
+      <div class="page-container">
+        <!--h1 class="visual-hidden">Welcome to the gorgerous Sedona. Because the Grand Canyon sucks!</h1-->
+        <img class="logo" src="images/main/welcome-big-logo.svg" alt="Седоны." width="458" height="352">
 
 
-      <!--подводка к приемуществам-->
-      <section class="advantages">
-        <h2 class="advantages-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
-        <p class="advantages-lil-title">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
-      </section>
+        <!--подводка к приемуществам-->
+        <div class=" title-container">
+          <section class="advantages">
+            <h2 class="advantages-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+            <p class="advantages-lil-title">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+          </section>
+        </div>
 
-      <!--список приемуществ-->
-      <section class="reasons-for-coolness">
-        <h2 class="visually-hidden"> Причины крутости</h2>
-        <ul class="reasons-for-coolness-list">
-          <li class="reasons-for-coolness-item">
-            <h3 class="reasons-for-coolness-title">Настоящий городок</h3>
-            <p class="reasons-for-coolness-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+        <!--список приемуществ-->
+        <section class="reasons-for-coolness">
+          <h2 class="visually-hidden"> Причины крутости</h2>
+          <ul class="reasons-for-coolness-list">
+            <li class="reasons-for-coolness-item">
+              <h3 class="reasons-for-coolness-title">Настоящий городок</h3>
+              <p class="reasons-for-coolness-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+            </li>
+            <li class="reasons-for-coolness-item-pic">
+              <img class="reasons-for-coolness-picture" src="images/main/photo-1.jpg" alt="фото улицы Седоны" width="800" height="385">
+            </li>
+          </ul>
+          <ul class="reasons-for-coolness-list middle-row">
+            <li class="reasons-for-coolness-item">
+              <h3 class="reasons-for-coolness-title">Небольшая площадь</h3>
+              <p class="reasons-for-coolness-description">Все достопримечательности находятся очень близко</p>
+            </li>
+            <li class="reasons-for-coolness-item">
+              <h3 class="reasons-for-coolness-title">Красивая дорога</h3>
+              <p class="reasons-for-coolness-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            </li>
+            <li class="reasons-for-coolness-item">
+              <h3 class="reasons-for-coolness-title">Мало туристов</h3>
+              <p class="reasons-for-coolness-description">Большинство едет в Гранд Каньон и толпится там</p>
+            </li>
+          </ul>
+          <ul class="reasons-for-coolness-list bottom-row">
+            <li class="reasons-for-coolness-item-pic">
+              <img class="reasons-for-coolness-picture" src="images/main/photo-2.jpg" alt="фото моста дьявола" width="800" height="385">
+            </li>
+            <li class="reasons-for-coolness-item">
+              <h3 class="reasons-for-coolness-title">Там есть мост дьявола</h3>
+              <p class="reasons-for-coolness-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+            </li>
+          </ul>
+        </section>
+
+        <!--Приглашение и подводка к услугам-->
+        <div class = "service-tit-container">
+          <section class="servicing">
+            <h2 class="servicing-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
+            <p class="servicing-lil-title">Опытный персонал и качественное обслуживание!</p>
+          </section>
+      </div>
+
+        <!--Мини список-->
+        <h2 class="visually-hidden">Услуги</h2>
+        <ul class="service-list">
+          <li class="service-item">
+            <img class="service-home-picture" alt="Иконка 'Домик'»." src="images/main/icons/home.svg" width="74.7" height="72">
+            <h3 class="service-title">Жильё</h3>
+            <p class="service-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
           </li>
-          <li class="reasons-for-coolness-item-pic">
-            <img class="reasons-for-coolness-picture" src="images/main/photo-1.jpg" alt="фото улицы Седоны" width="800" height="385">
+          <li class="service-item">
+            <img class="service-food-picture" alt="Иконка 'Гамбургер'»." src="images/main/icons/food.svg" width="73.814" height="70">
+            <h3 class="service-title">Еда</h3>
+            <p class="service-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+          </li>
+          <li class="service-item">
+            <img class="service-souvenir-picture" alt="Иконка 'Подарок'»." src="images/main/icons/souvenir.svg" width="64" height="75.947">
+            <h3 class="service-title">Сувениры</h3>
+            <p class="service-description">Не только китайского, но и настоящего местного производства!</p>
           </li>
         </ul>
-        <ul class="reasons-for-coolness-list-middle-row">
-          <li class="reasons-for-coolness-item">
-            <h3 class="reasons-for-coolness-title">Небольшая площадь</h3>
-            <p class="reasons-for-coolness-description">Все достопримечательности находятся очень близко</p>
-          </li>
-          <li class="reasons-for-coolness-item">
-            <h3 class="reasons-for-coolness-title">Красивая дорога</h3>
-            <p class="reasons-for-coolness-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-          </li>
-          <li class="reasons-for-coolness-item">
-            <h3 class="reasons-for-coolness-title">Мало туристов</h3>
-            <p class="reasons-for-coolness-description">Большинство едет в Гранд Каньон и толпится там</p>
-          </li>
-        </ul>
-        <ul class="reasons-for-coolness-list-bottom-row">
-          <li class="reasons-for-coolness-item-pic">
-            <img class="reasons-for-coolness-picture" src="images/main/photo-2.jpg" alt="фото моста дьявола" width="800" height="385">
-          </li>
-          <li class="reasons-for-coolness-item">
-            <h3 class="reasons-for-coolness-title">Там есть мост дьявола</h3>
-            <p class="reasons-for-coolness-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-          </li>
-        </ul>
-      </section>
 
-      <!--Приглашение и подводка к услугам-->
-      <section class="servicing">
-        <h2 class="servicing-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
-        <p class="servicing-lil-title">Опытный персонал и качественное обслуживание!</p>
-      </section>
-
-      <!--Мини список-->
-      <h2 class="visually-hidden">Услуги</h2>
-      <ul class="service-list">
-        <li class="service-item">
-          <img class="service-home-picture" alt="Иконка 'Домик'»." src="images/main/icons/home.svg" width="74.7" height="72">
-          <h3 class="service-title">Жильё</h3>
-          <p class="service-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-        </li>
-        <li class="service-item">
-          <img class="service-food-picture" alt="Иконка 'Гамбургер'»." src="images/main/icons/food.svg" width="73.814" height="70">
-          <h3 class="service-title">Еда</h3>
-          <p class="service-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
-        </li>
-        <li class="service-item">
-          <img class="service-souvenir-picture" alt="Иконка 'Подарок'»." src="images/main/icons/souvenir.svg" width="64" height="75.947">
-          <h3 class="service-title">Сувениры</h3>
-          <p class="service-description">Не только китайского, но и настоящего местного производства!</p>
-        </li>
-      </ul>
-
-      <!-- Поиск гостиницы  -->
-      <section class="hotel-search">
-        <h2 class="hotel-title"> Заинтересовались?</h2>
-        <p class="hotel-lil-title">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <button class="button brown-button" type="button">
-          <span class="visually-hidden">Поиск гостиницы в Седоне</span>
-        </button>
-      </section>
+        <!-- Поиск гостиницы  -->
+        <div class="hotel-search-container">
+          <section class="hotel-search">
+            <div class="hotel-search-title-container">
+              <h2 class="hotel-title"> Заинтересовались?</h2>
+              <p class="hotel-lil-title">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+            </div>
+            <button class="button brown-button" type="button">
+              <span class="visually-hidden">Поиск гостиницы в Седоне</span>
+            </button>
+          </section>
+        </div>
+      </div>
     </main>
+
 
     <!--Footer-->
     <footer class="page-footer">
       <!--Рассылка-->
       <section class="email-newsletter first-page">
-        <h2 class="email-title">Подпишитесь на рассылку!</h2>
-        <p class="email-lil-title">Только полезная информация и никакого спама, честное бойскаутское</p>
-        <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
-          <label for="newsletter-email">Ваш e-mail</label>
-          <input class="field"  placeholder="email@example.com" type="email" name="newsletter-email" id="newsletter-email" required>
-          <button class="button newsletter-button" type="submit">
-            <span class="visually-hidden">Подписаться</span>
-          </button>
-        </form>
+        <div class="email-container-pad">
+          <div class="email-container">
+            <h2 class="email-title">Подпишитесь на рассылку!</h2>
+            <p class="email-lil-title">Только полезная информация и никакого спама, честное бойскаутское</p>
+            <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
+              <label for="newsletter-email">Ваш e-mail</label>
+                <input class="field"  placeholder="email@example.com" type="email" name="newsletter-email" id="newsletter-email" required>
+              <button class="button newsletter-button" type="submit">
+                <span class="visually-hidden">Подписаться</span>
+              </button>
+            </form>
+          </div>
+        </div>
       </section>
-      <section class="footer-social">
-        <h2 class="visually-hidden">Социальные сети</h2>
-        <ul class="footer-social-list">
-          <li class="footer-social-item">
-            <a class="button" href="https://vk.com/htmlacademy">
-              <span class="visually-hidden">ВКонтакте</span>
-            </a>
-          </li>
-          <li class="footer-social-item">
-            <a class="button" href="https://t.me/htmlacademy ">
-              <span class="visually-hidden">Телеграм</span>
-            </a>
-          </li>
-          <li class="footer-social-item">
-            <a class="button" href="https://www.youtube.com/user/htmlacademyru">
-              <span class="visually-hidden">Ютуб</span>
-            </a>
-          </li>
-        </ul>
-      </section>
-      <section class="footer-contacts">
-        <h2 class="visually-hidden">Контакты</h2>
-        <address class="contacts-phone">
-          <a class="contacts-phone-number" href="tel:+78128121212">+7 (812) 812-12-12</a>
-        </address>
-      </section>
-      <a class="logo" href="https://htmlacademy.ru/">
-        <img class="logo-picture" alt="Логотип html-academy»." src="images/footer/logo_htmlacademy.svg" width="114.9" height="32.9">
 
-      </a>
+      <!--Доделать разметку-->
+
+      <div class="footer-container-horiz">
+        <div class="footer-container-for-centering">
+          <section class="footer-social">
+            <h2 class="visually-hidden">Социальные сети</h2>
+            <ul class="footer-social-list">
+              <li class="footer-social-item">
+                <a class="button" href="https://vk.com/htmlacademy">
+                  <span class="visually-hidden">ВКонтакте</span>
+                </a>
+              </li>
+              <li class="footer-social-item">
+                <a class="button" href="https://t.me/htmlacademy ">
+                  <span class="visually-hidden">Телеграм</span>
+                </a>
+              </li>
+              <li class="footer-social-item">
+                <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+                  <span class="visually-hidden">Ютуб</span>
+                </a>
+              </li>
+            </ul>
+          </section>
+          <section class="footer-contacts">
+            <h2 class="visually-hidden">Контакты</h2>
+            <address class="contacts-phone">
+              <a class="contacts-phone-number" href="tel:+78128121212">+7 (812) 812-12-12</a>
+            </address>
+          </section>
+          <a class="logo-end" href="https://htmlacademy.ru/">
+            <img class="logo-picture" alt="Логотип html-academy»." src="images/footer/logo_htmlacademy.svg" width="114.9" height="32.9">
+          </a>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
