--- a/catalog.html
+++ b/catalog.html
@@ -52,81 +52,81 @@
     <main class="main-inner main-container">
       <div class="page-container">
         <section class="catalog-hotels-filter">
-          <section class = "catalog-hotel-wrap">
-            <header class="inner-header">
-              <h1 class="inner-header-title">Гостиницы Седоны</h1>
-              <!-- Хлебные крошки  -->
-              <ul class="breadcrumbs">
-                <a class="breadcrumbs-link" href="index.html">
-                  <span class="visually-hidden">
-                    Главная
-                  </span>
-                </a>
-                <li class="breadcrumbs-item">
-                  <a class="breadcrumbs-link">Гостиницы</a>
-                </li>
-              </ul>
-            </header>
+          <header class="inner-header">
+            <h1 class="inner-header-title">Гостиницы Седоны</h1>
+            <!-- Хлебные крошки  -->
+            <ul class="breadcrumbs">
+              <a class="breadcrumbs-link" href="index.html">
+                <span class="visually-hidden">
+                  Главная
+                </span>
+              </a>
+              <li class="breadcrumbs-item">
+                <a class="breadcrumbs-link">Гостиницы</a>
+              </li>
+            </ul>
+          </header>
 
-            <section class="catalog-hotels">
-              <!--временно добавим атрибут hidden, чтобы заголовок не рушил сетку-->
-                <h2 class="visually-hidden" hidden>Список гостинец с фильтрами</h2>
-                <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
-                  <fieldset class="catalog-filter-group infr">
-                    <legend class="catalog-filter-title">Инфраструктура:</legend>
-                    <ul class="catalog-filter-list">
-                      <li class="catalog-filter-item">
-                        <label class="control">
-                          <input class="control-input" type="checkbox" name="swimming-pool" checked>
-                          Бассейн
-                        </label>
-                      </li>
-                      <li class="catalog-filter-item">
-                        <label class="control">
-                          <input class="control-input" type="checkbox" name="parking" checked>
-                          Парковка
-                        </label>
-                      </li>
-                      <li class="catalog-filter-item">
-                        <label class="control">
-                          <input class="control-input" type="checkbox" name="wi-fi">
-                          Wi-Fi
-                        </label>
-                      </li>
-                    </ul>
-                  </fieldset>
-                  <fieldset class="catalog-filter-group type-hotel">
-                    <legend class="catalog-filter-title">Тип жилья:</legend>
-                    <ul class="catalog-filter-list">
-                      <li class="catalog-filter-item">
-                        <label class="control">
-                          <input class="control-input" type="radio" name="hotel-group" value="hotel" checked>
-                          Гостиница
-                        </label>
-                      </li>
-                      <li class="catalog-filter-item">
-                        <label class="control">
-                          <input class="control-input" type="radio" name="hotel-group" value="motel">
-                          Мотель
-                        </label>
-                      </li>
-                      <li class="catalog-filter-item">
-                        <label class="control">
-                          <input class="control-input" type="radio" name="hotel-group" value="apartments">
-                          Апартаменты
-                        </label>
-                      </li>
-                    </ul>
-                  </fieldset>
-                  <div class="button-searching">
-                    <button class="button blue-button hotel-choosing hotel-choosing-up" type="submit">Применить</button>
-                    <button class="button hotel-choosing hotel-choosing-down" type="reset">Сбросить</button>
-                  </div>
-              </section>
-            </section>
+          <section class="catalog-hotels">
+            <!--временно добавим атрибут hidden, чтобы заголовок не рушил сетку-->
+            <h2 class="visually-hidden" hidden>Список гостинец с фильтрами</h2>
+            <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
+              <fieldset class="catalog-filter-group infr">
+                <legend class="catalog-filter-title">Инфраструктура:</legend>
+                <ul class="catalog-filter-list">
+                  <li class="catalog-filter-item">
+                    <label class="control">
+                      <input class="control-input" type="checkbox" name="swimming-pool" checked>
+                      Бассейн
+                    </label>
+                  </li>
+                  <li class="catalog-filter-item">
+                    <label class="control">
+                      <input class="control-input" type="checkbox" name="parking" checked>
+                      Парковка
+                    </label>
+                  </li>
+                  <li class="catalog-filter-item">
+                    <label class="control">
+                      <input class="control-input" type="checkbox" name="wi-fi">
+                      Wi-Fi
+                    </label>
+                  </li>
+                </ul>
+              </fieldset>
+              <fieldset class="catalog-filter-group type-hotel">
+                <legend class="catalog-filter-title">Тип жилья:</legend>
+                <ul class="catalog-filter-list">
+                  <li class="catalog-filter-item">
+                    <label class="control">
+                      <input class="control-input" type="radio" name="hotel-group" value="hotel" checked>
+                      Гостиница
+                    </label>
+                  </li>
+                  <li class="catalog-filter-item">
+                    <label class="control">
+                      <input class="control-input" type="radio" name="hotel-group" value="motel">
+                      Мотель
+                    </label>
+                  </li>
+                  <li class="catalog-filter-item">
+                    <label class="control">
+                      <input class="control-input" type="radio" name="hotel-group" value="apartments">
+                      Апартаменты
+                    </label>
+                  </li>
+                </ul>
+              </fieldset>
+              <div class="button-searching">
+                <button class="button blue-button hotel-choosing hotel-choosing-up" type="submit">Применить</button>
+                <button class="button hotel-choosing hotel-choosing-down" type="reset">Сбросить</button>
+              </div>
+            </form>
+          </section>
         </section>
 
-          <div class="catalog-column">
+        <div class="catalog-column">
+          <div class="catalog-sort-title">
             <h3 class="hotel-found">НАЙДЕНО ГОСТИНИЦ:38</h3>
             <!--Сортировка-->
             <select class="select-control" aria-label="Сортировка">
@@ -135,7 +135,7 @@
               <option value="expensive">Сначала дорогое</option>
             </select>
 
-            <!--Отображение на странице при сортировке-->>
+            <!--Отображение на странице при сортировке-->
             <a href="#" class="button button-light">
               <span class="visually-hidden">Показать карточки</span>
             </a>
@@ -145,67 +145,92 @@
             <a class="button" href="#">
               <span class="visually-hidden">Показать список</span>
             </a>
-
-            <!--Карточка товара-->>
-            <ul class="hotel-list">
-              <li class = "hotel-card">
-                <a class="hotel-card-link" href="hotel.html">
-                  <img class="hotel-card-image" src="images/main/hotels/hotel-1.jpg" width="300" height="212" alt="">
-                  <h3 class="hotel-card-title">Amara Resort & Spa</h3>
-                </a>
+          </div>
+          <!--Карточка товара-->
+          <ul class="hotel-list">
+            <li class = "hotel-card">
+              <a class="hotel-card-link" href="hotel.html">
+                <img class="hotel-card-image" src="images/main/hotels/hotel-1.jpg" width="300" height="212" alt="">
+                <h3 class="hotel-card-title">Amara Resort & Spa</h3>
+              </a>
+              <div class="hotel-card-title">
                 <p class="hotel-card-type">Гостиница</p>
                 <p class="hotel-card-price">От 4000 ₽</p>
+              </div>
+              <div class="hotel-buttons">
                 <a class="hotel-card-button-more button brown-button" href="#">Подробнее</a>
                 <a class="hotel-card-button-best button blue-button" href="#">В избранное </a>
+              </div>
+              <div class ="hotel-rating">
                 <img class="rating-stars" src="" alt="Четыре звезды">
                 <span class="visually-hidden">Четыре звезды</span>
-                <p>Рейтинг 8,5</p>
-              </li>
+                <p class="rating">Рейтинг 8,5</p>
+              </div>
+            </li>
 
-              <li class = "hotel-card">
-                <a class="hotel-card-link" href="hotel.html">
-                  <img class="hotel-card-image" src="images/main/hotels/hotel-2.jpg" width="300" height="212" alt="">
-                  <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
-                </a>
+            <li class = "hotel-card">
+              <a class="hotel-card-link" href="hotel.html">
+                <img class="hotel-card-image" src="images/main/hotels/hotel-2.jpg" width="300" height="212" alt="">
+                <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
+              </a>
+              <div class="hotel-card-title">
                 <p class="hotel-card-type">Гостиница</p>
                 <p class="hotel-card-price">От 5000 ₽</p>
+              </div>
+              <div class="hotel-buttons">
                 <a class="hotel-card-button-more button brown-button" href="#">Подробнее</a>
                 <a class="hotel-card-button-best button blue-button" href="#">В избранное </a>
+              </div>
+              <div class ="hotel-rating">
                 <img class="rating-stars" src="" alt="Четыре звезды">
                 <span class="visually-hidden">Четыре звезды</span>
-                <p>Рейтинг 9,2</p>
-              </li>
+                <p class="rating">Рейтинг 9,2</p>
+              </div>
+            </li>
 
-              <li class = "hotel-card">
-                <a class="hotel-card-link" href="hotel.html">
-                  <img class="hotel-card-image" src="images/main/hotels/hotel-3.jpg" width="300" height="212" alt="">
-                  <h3 class="hotel-card-title">Desert Quail Inn</h3>
-                </a>
+            <li class = "hotel-card">
+              <a class="hotel-card-link" href="hotel.html">
+                <img class="hotel-card-image" src="images/main/hotels/hotel-3.jpg" width="300" height="212" alt="">
+                <h3 class="hotel-card-title">Desert Quail Inn</h3>
+              </a>
+              <div class="hotel-card-title">
                 <p class="hotel-card-type">Гостиница</p>
                 <p class="hotel-card-price">От 2500 ₽</p>
+              </div>
+              <div class="hotel-buttons">
                 <a class="hotel-card-button-more button brown-button" href="#">Подробнее</a>
                 <a class="hotel-card-button-best button blue-button" href="#">В избранное </a>
+              </div>
+              <div class ="hotel-rating">
                 <img class="rating-stars" src="" alt="Три звезды">
                 <span class="visually-hidden">Три звезды</span>
-                <p>Рейтинг 6,9</p>
-              </li>
+                <p class="rating">Рейтинг 6,9</p>
+              </div>
+            </li>
 
-              <li class = "hotel-card">
-                <a class="hotel-card-link" href="hotel.html">
-                  <img class="hotel-card-image" src="images/main/hotels/hotel-4.jpg" width="300" height="212" alt="">
-                  <h3 class="hotel-card-title">GreenTree Inn</h3>
-                </a>
+            <li class = "hotel-card">
+              <a class="hotel-card-link" href="hotel.html">
+                <img class="hotel-card-image" src="images/main/hotels/hotel-4.jpg" width="300" height="212" alt="">
+                <h3 class="hotel-card-title">GreenTree Inn</h3>
+              </a>
+              <div class="hotel-card-title">
                 <p class="hotel-card-type">Гостиница</p>
                 <p class="hotel-card-price">От 1500 ₽</p>
+              </div>
+              <div class="hotel-buttons">
                 <a class="hotel-card-button-more button brown-button" href="#">Подробнее</a>
                 <a class="hotel-card-button-best button blue-button" href="#">В избранное </a>
+              </div>
+              <div class ="hotel-rating">
                 <img class="rating-stars" src="" alt="Две звезды">
                 <span class="visually-hidden">Две звезды</span>
-                <p>Рейтинг 5,0</p>
-              </li>
-            </ul>
+                <p class="rating">Рейтинг 5,0</p>
+              </div>
+            </li>
+          </ul>
 
-            <!--Пагинация-->
+          <!--Пагинация-->
+          <div class="pagination-container">
             <ul class="pagination">
               <li class="pagination-item">
                 <a class="pagination-link pagination-current">1</a>
@@ -220,16 +245,14 @@
                 <a class="pagination-link" href="#">4</a>
               </li>
               <li class="pagination-item">
-                <a class="pagination-link pagination-next" href="#">
-                  <span class="visually-hidden">...</span>
-                </a>
+                <a class="pagination-link pagination-next" href="#">...</a>
               </li>
               <li class="pagination-item">
                 <a class="pagination-link" href="#">10</a>
               </li>
             </ul>
           </div>
-        </section>
+        </div>
       </div>
     </main>
 
