--- a/index.html
+++ b/index.html
@@ -40,20 +40,18 @@
             </a>
           </li>
           <li class="navigation-item">
-            <button class=" button brown-button" type="button">
-              <span class="visually-hidden">Хочу сюда!</span>
-            </button>
+            <a class="navigation-link" href="#">Хочу сюда!</a>
           </li>
         </ul>
       </nav>
     </header>
 
-
     <!--Main-->
     <main class="main-container main-home-page">
       <div class="page-container">
-        <!--h1 class="visual-hidden">Welcome to the gorgerous Sedona. Because the Grand Canyon sucks!</h1-->
-        <img class="logo" src="images/main/welcome-big-logo.svg" alt="Седоны." width="458" height="352">
+        <div class = "logo-container">
+          <img class="logo" src="images/main/welcome-big-logo.svg" alt="Седоны." width="458" height="352">
+        </div>
 
 
         <!--подводка к приемуществам-->
@@ -136,9 +134,7 @@
               <h2 class="hotel-title"> Заинтересовались?</h2>
               <p class="hotel-lil-title">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
             </div>
-            <button class="button brown-button" type="button">
-              <span class="visually-hidden">Поиск гостиницы в Седоне</span>
-            </button>
+            <a class="button brown-button search-hotel-bottom" type="submit" href="#">Поиск гостиницы в Седоне</a>
           </section>
         </div>
       </div>
@@ -148,57 +144,51 @@
     <!--Footer-->
     <footer class="page-footer">
       <!--Рассылка-->
-      <section class="email-newsletter first-page">
-        <div class="email-container-pad">
-          <div class="email-container">
-            <h2 class="email-title">Подпишитесь на рассылку!</h2>
-            <p class="email-lil-title">Только полезная информация и никакого спама, честное бойскаутское</p>
-            <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
-              <label for="newsletter-email">Ваш e-mail</label>
-                <input class="field"  placeholder="email@example.com" type="email" name="newsletter-email" id="newsletter-email" required>
-              <button class="button newsletter-button" type="submit">
-                <span class="visually-hidden">Подписаться</span>
-              </button>
-            </form>
-          </div>
+      <section class="email-newsletter">
+        <div class="email-container first-page">
+          <h2 class="email-title">Подпишитесь на рассылку!</h2>
+          <p class="email-lil-title">Только полезная информация и никакого спама, честное бойскаутское</p>
+          <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
+            <label for="newsletter-email">Ваш e-mail</label>
+            <input class="field"  placeholder="email@example.com" type="email" name="newsletter-email" id="newsletter-email" required>
+            <a class="button newsletter-button blue-button" type="submit" href="#">Подписаться</a>
+          </form>
         </div>
       </section>
 
       <!--Доделать разметку-->
-
-      <div class="footer-container-horiz">
-        <div class="footer-container-for-centering">
-          <section class="footer-social">
-            <h2 class="visually-hidden">Социальные сети</h2>
-            <ul class="footer-social-list">
-              <li class="footer-social-item">
-                <a class="button" href="https://vk.com/htmlacademy">
-                  <span class="visually-hidden">ВКонтакте</span>
-                </a>
-              </li>
-              <li class="footer-social-item">
-                <a class="button" href="https://t.me/htmlacademy ">
-                  <span class="visually-hidden">Телеграм</span>
-                </a>
-              </li>
-              <li class="footer-social-item">
-                <a class="button" href="https://www.youtube.com/user/htmlacademyru">
-                  <span class="visually-hidden">Ютуб</span>
-                </a>
-              </li>
-            </ul>
-          </section>
-          <section class="footer-contacts">
-            <h2 class="visually-hidden">Контакты</h2>
-            <address class="contacts-phone">
-              <a class="contacts-phone-number" href="tel:+78128121212">+7 (812) 812-12-12</a>
-            </address>
-          </section>
-          <a class="logo-end" href="https://htmlacademy.ru/">
-            <img class="logo-picture" alt="Логотип html-academy»." src="images/footer/logo_htmlacademy.svg" width="114.9" height="32.9">
-          </a>
-        </div>
+      <div class="footer-container-for-centering">
+        <section class="footer-social">
+          <h2 class="visually-hidden">Социальные сети</h2>
+          <ul class="footer-social-list">
+            <li class="footer-social-item">
+              <a class="button" href="https://vk.com/htmlacademy">
+                <span class="visually-hidden">ВКонтакте</span>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="button" href="https://t.me/htmlacademy ">
+                <span class="visually-hidden">Телеграм</span>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+                <span class="visually-hidden">Ютуб</span>
+              </a>
+            </li>
+          </ul>
+        </section>
+        <section class="footer-contacts">
+          <h2 class="visually-hidden">Контакты</h2>
+          <address class="contacts-phone">
+            <a class="contacts-phone-number" href="tel:+78128121212">+7 (812) 812-12-12</a>
+          </address>
+        </section>
+        <a class="logo-end" href="https://htmlacademy.ru/">
+          <img class="logo-picture" alt="Логотип html-academy»." src="images/footer/logo_htmlacademy.svg" width="114.9" height="32.9">
+        </a>
       </div>
+
     </footer>
   </body>
 </html>
